--- a/index.html
+++ b/index.html
@@ -67,36 +67,33 @@
       <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
-          <ul class="advantages-icon-list">
-            <li class="advantages-icon-item">
-              <a href="">
-                <svg class="advantages-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="advantages-icon-item">
-              <a href="">
-                <svg class="advantages-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="advantages-icon-item">
-              <a href="">
-                <svg class="advantages-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="advantages-icon-item">
-              <a href="">
-                <svg class="advantages-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+
+          <div class="advantages-ill">
+            <div class="advantages-ill-icon">
+              <svg class="advantages-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
+
+            <div class="advantages-ill-icon">
+              <svg class="advantages-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
+
+            <div class="advantages-ill-icon">
+              <svg class="advantages-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
+
+            <div class="advantages-ill-icon">
+              <svg class="advantages-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
+          </div>
+
           <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-subtitle">Strategy</h3>
@@ -438,8 +435,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-icon-Social">
-          <h4 class="footer-icon-title">Social media</h4>
+        <div class="footer-icon-social">
+          <p class="footer-icon-title">Social media</p>
           <ul class="footer-icon-list">
             <li class="footer-icon-item">
               <a class="footer-icon-link" href="">
