--- a/index.html
+++ b/index.html
@@ -68,31 +68,39 @@
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
 
-          <div class="advantages-ill">
-            <div class="advantages-ill-icon">
-              <svg class="advantages-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
-            </div>
+          <ul class="advantages-ill">
+            <li class="advantages-item-ill">
+              <div class="advantages-ill-icon">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+            </li>
 
-            <div class="advantages-ill-icon">
-              <svg class="advantages-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
-            </div>
+            <li>
+              <div class="advantages-ill-icon">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+            </li>
 
-            <div class="advantages-ill-icon">
-              <svg class="advantages-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
-            </div>
+            <li>
+              <div class="advantages-ill-icon">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+            </li>
 
-            <div class="advantages-ill-icon">
-              <svg class="advantages-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
-            </div>
-          </div>
+            <li>
+              <div class="advantages-ill-icon">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
 
           <ul class="advantages-list">
             <li class="advantages-item">
