--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
 
-          <ul class="advantages-ill">
+          <ul class="advantages-list-ill">
             <li class="advantages-item-ill">
               <div class="advantages-ill-icon">
                 <svg class="advantages-icon" width="64" height="64">
